--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="active"><a href="index.html">Homepage</a></li>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="left-sidebar.html">About</a></li>
+							<li><a href="right-sidebar.html">Contact Me</a></li>
+							<li><a href="no-sidebar.html">Portfolio</a></li>
 						</ul>
 					</nav>
 
